--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,6 +2,7 @@
 <html>
   <head>
     <% include ../partials/head %>
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
