--- a/views/pages/404.ejs
+++ b/views/pages/404.ejs
@@ -7,7 +7,7 @@
   </head>
   <body>
     <% include ../partials/header %>
-      <h1>404 - Not found</h1>
+      <h1>404 - (Not found)</h1>
       <script src="js/script.js"></script>
     <% include ../partials/footer %>
   </body>
